--- a/teamwork/requirements.txt
+++ b/teamwork/requirements.txt
@@ -1,3 +1,3 @@
 Django==2.0.3
-django-simple-history==1.9.0
+-e git+https://github.com/treyhunner/django-simple-history.git@django-20#egg=django-simple-history
 pytz==2018.3
