--- a/teamwork/requirements.txt
+++ b/teamwork/requirements.txt
@@ -1,8 +1,8 @@
 Django==2.0.3
-django-bootstrap-datepicker-plus==1.0.0
+django-bootstrap-datepicker-plus==3.0.4
 django-fontawesome==0.3.1
 django-markdownx==2.0.22
--e git+https://github.com/treyhunner/django-simple-history.git@django2.0#egg=django_simple_history
+-e git+https://github.com/treyhunner/django-simple-history.git@master#egg=django_simple_history
 django-widget-tweaks==1.4.1
 Markdown==2.6.11
 Pillow==5.0.0
